--- a/extras/backstage/helm-release.yaml
+++ b/extras/backstage/helm-release.yaml
@@ -14,7 +14,7 @@ spec:
         kind: HelmRepository
         name: giantswarm-control-plane-catalog
         namespace: flux-giantswarm
-      version: 0.9.0
+      version: SHOULD-PATCH-THIS-IN-CMC-REPOSITORY
   install:
     remediation:
       retries: 10
