--- a/extras/backstage/helm-release.yaml
+++ b/extras/backstage/helm-release.yaml
@@ -38,6 +38,7 @@ spec:
               - op: add
                 path: /spec/template/metadata/labels/backstage.io~1kubernetes-id
                 value: backstage
+  releaseName: backstage
   targetNamespace: backstage
   timeout: 10m
   upgrade:
