--- a/bases/provider/aws-china/flux-v2/patch-source-controller.yaml
+++ b/bases/provider/aws-china/flux-v2/patch-source-controller.yaml
@@ -7,6 +7,9 @@ spec:
   template:
     spec:
       hostAliases:
+      - ip: "192.168.190.100"
+        hostnames:
+          - "github.com"
       - ip: "192.168.190.101"
         hostnames:
         - "giantswarm.github.io"
