--- a/bases/flux-giantswarm-resources/resource-gitrepositories.yaml
+++ b/bases/flux-giantswarm-resources/resource-gitrepositories.yaml
@@ -84,4 +84,4 @@ spec:
   secretRef:
     name: shared-configs-ssh-credentials
   timeout: 60s
-  url: ssh://git@ssh.github.com:${github_port:=443}/giantswarm/silences
+  url: ssh://git@ssh.github.com:${github_port:=443}/giantswarm/silences.git
