--- a/bases/flux-giantswarm-resources/resource-kustomizations.yaml
+++ b/bases/flux-giantswarm-resources/resource-kustomizations.yaml
@@ -131,3 +131,41 @@ spec:
     namespace: flux-giantswarm
   targetNamespace: giantswarm
   timeout: 3m
+----
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: silences-default
+  namespace: flux-giantswarm
+spec:
+  dependsOn:
+    - name: flux
+  interval: 5m
+  # DO NOT use slashes in the comment to indicate the path, just "->".
+  path: "./default/silences"
+  prune: false
+  retryInterval: 1m
+  sourceRef:
+    kind: GitRepository
+    name: giantswarm-config
+    namespace: flux-giantswarm
+  timeout: 3m
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: silences
+  namespace: flux-giantswarm
+spec:
+  dependsOn:
+    - name: flux
+  interval: 5m
+  # DO NOT use slashes in the comment to indicate the path, just "->".
+  path: "./installations/{replaced in management-clusters -> <MC_NAME> -> kustomization.yaml}/silences"
+  prune: false
+  retryInterval: 1m
+  sourceRef:
+    kind: GitRepository
+    name: giantswarm-config
+    namespace: flux-giantswarm
+  timeout: 3m
