--- a/extras/crossplane/providers/upbound/aws/provider.yaml
+++ b/extras/crossplane/providers/upbound/aws/provider.yaml
@@ -12,7 +12,7 @@ spec:
   packagePullPolicy: IfNotPresent
   revisionActivationPolicy: Automatic
   revisionHistoryLimit: 0
-  skipDependencyResolution: false
-  package: xpkg.upbound.io/upbound/provider-family-aws:v${awsversion:=0.43.0}
+  skipDependencyResolution: true
+  package: gsoci.azurecr.io/giantswarm/upbound-provider-family-aws:v${awsversion:=1.0.0}
   runtimeConfigRef:
     name: upbound-provider-family-aws
