--- a/bases/silences/default-test.yaml
+++ b/bases/silences/default-test.yaml
@@ -1,14 +1,11 @@
 apiVersion: monitoring.giantswarm.io/v1alpha1
 kind: Silence
 metadata:
-  name: default-silence
+  name: common-silence
   annotations:
     valid-until: "2100-01-01"
 spec:
-  targetTags:
-  - name: installation
-    value: default-name
   matchers:
-  - name: cluster_id
-    value: default-id
+  - name: alertname
+    value: NoisyAlert
     isRegex: false
