Use Enforce instead of enforce

--- a/bases/flux-app-v2/giantswarm/resource-kyverno-policies.yaml
+++ b/bases/flux-app-v2/giantswarm/resource-kyverno-policies.yaml
@@ -3,7 +3,7 @@ kind: ClusterPolicy
 metadata:
   name: flux-multi-tenancy
 spec:
-  validationFailureAction: enforce
+  validationFailureAction: Enforce
   rules:
     - name: serviceAccountNameMustBeSet
       exclude:
