--- a/bases/flux-giantswarm-resources/resource-kustomizations.yaml
+++ b/bases/flux-giantswarm-resources/resource-kustomizations.yaml
@@ -138,6 +138,9 @@ metadata:
   name: silences
   namespace: flux-giantswarm
 spec:
+  commonMetadata:
+    annotations:
+      config.giantswarm.io/origin: ""
   dependsOn:
     - name: flux
   interval: 5m
