try github action path

--- a/.github/actions/silences-validate/action.yaml
+++ b/.github/actions/silences-validate/action.yaml
@@ -7,6 +7,11 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Run goodbye.sh
+    - name: Set GitHub Path
+      run: echo "$GITHUB_ACTION_PATH" >> $GITHUB_PATH
+      shell: bash
+      env:
+        GITHUB_ACTION_PATH: ${{ github.action_path }}
+    - name: Validate silences files
       shell: bash
       run: make silences-validate directory=${{ inputs.directory }}
