--- a/.github/actions/silences-validate/action.yaml
+++ b/.github/actions/silences-validate/action.yaml
@@ -12,11 +12,19 @@ runs:
       shell: bash
       env:
         GITHUB_ACTION_PATH: ${{ github.action_path }}
-    - name: Install yq
+    - name: Install dependencies
       shell: bash
       run: |
         cd ${{ github.action_path }}
         make bin/yq
+        make bin/kustomize
     - name: Validate silences files
       shell: bash
       run: silences-validate.sh ${{ inputs.directory }}
+    - name: Setup kind cluster
+      uses: helm/kind-action@v1
+    - name: Validate unique names
+      run: |
+        # create CRD
+        kubectl create -f https://raw.githubusercontent.com/giantswarm/silence-operator/master/config/crd/monitoring.giantswarm.io_silences.yaml
+        kustomize build ${{ inputs.directory }} | kubectl apply -f -
