--- a/.github/actions/silences-validate/action.yaml
+++ b/.github/actions/silences-validate/action.yaml
@@ -28,4 +28,4 @@ runs:
       run: |
         # create CRD
         kubectl create -f https://raw.githubusercontent.com/giantswarm/silence-operator/master/config/crd/monitoring.giantswarm.io_silences.yaml
-        kustomize build --load-restrictor LoadRestrictionsNone ${{ inputs.directory }} | kubectl apply -f -
+        kustomize build ${{ inputs.directory }} | kubectl apply -f -
