--- a/.github/workflows/silences-validate.yaml
+++ b/.github/workflows/silences-validate.yaml
@@ -14,4 +14,4 @@ jobs:
       - id: silences-validate-action
         uses: ./.github/actions/silences-validate
         with:
-          directory: */silences
+          directory: '*/silences'
