--- a/.github/actions/silences-validate/action.yaml
+++ b/.github/actions/silences-validate/action.yaml
@@ -20,7 +20,10 @@ runs:
         make bin/kustomize
     - name: Validate silences files
       shell: bash
-      run: silences-validate.sh ${{ inputs.directory }}
+      run: |
+        for directory in ${{ inputs.directory }}; do
+          silences-validate.sh "$directory"
+        done
     - name: Setup kind cluster
       uses: helm/kind-action@v1
     - name: Validate unique names
@@ -28,4 +31,8 @@ runs:
       run: |
         # create CRD
         kubectl create -f https://raw.githubusercontent.com/giantswarm/silence-operator/master/config/crd/monitoring.giantswarm.io_silences.yaml
-        kustomize build ${{ inputs.directory }} | kubectl apply -f -
+        for directory in ${{ inputs.directory }}; do
+          kustomize build ${{ inputs.directory }} --output resources.yaml
+          kubectl apply -f resources.yaml
+          kubectl delete -f resources.yaml
+        done
