--- a/.github/actions/silences-validate/action.yaml
+++ b/.github/actions/silences-validate/action.yaml
@@ -18,6 +18,12 @@ runs:
         cd ${{ github.action_path }}
         make bin/yq
         make bin/kustomize
+    - name: Check directory pattern
+      shell: bash
+      run: |
+        # Check for non-empty pattern and valid directories
+        test -n "${{ inputs.directory_pattern }}" && \
+          echo ${{ inputs.directory_pattern }} | xargs -I{} test -d {} && echo ok
     - name: Validate silences files
       shell: bash
       run: |
