--- a/.github/actions/silences-validate/action.yaml
+++ b/.github/actions/silences-validate/action.yaml
@@ -28,6 +28,7 @@ runs:
       shell: bash
       run: |
         for directory in ${{ inputs.directory_pattern }}; do
+          echo "Validating silence files in $directory"
           silences-validate.sh "$directory"
         done
     - name: Setup kind cluster
@@ -38,6 +39,7 @@ runs:
         # create CRD
         kubectl create -f https://raw.githubusercontent.com/giantswarm/silence-operator/master/config/crd/monitoring.giantswarm.io_silences.yaml
         for directory in ${{ inputs.directory_pattern }}; do
+          echo "Validating unique names in $directory"
           kustomize build "$directory" --output "${directory}/resources.yaml"
           kubectl apply -f "${directory}/resources.yaml"
           kubectl delete -f "${directory}/resources.yaml"
