--- a/.github/actions/silences-validate/action.yaml
+++ b/.github/actions/silences-validate/action.yaml
@@ -33,10 +33,9 @@ runs:
         done
     - name: Setup kind cluster
       uses: helm/kind-action@v1
-    - name: Validate unique names
+    - name: Validate CRs
       shell: bash
       run: |
-        # create CRD
         kubectl create -f https://raw.githubusercontent.com/giantswarm/silence-operator/master/config/crd/monitoring.giantswarm.io_silences.yaml
         for directory in ${{ inputs.directory_pattern }}; do
           echo "Validating unique names in $directory"
