--- a/.github/actions/silences-validate/action.yaml
+++ b/.github/actions/silences-validate/action.yaml
@@ -33,12 +33,12 @@ runs:
         done
     - name: Setup kind cluster
       uses: helm/kind-action@v1
-    - name: Validate CRs
+    - name: Validate silence CRs
       shell: bash
       run: |
         kubectl create -f https://raw.githubusercontent.com/giantswarm/silence-operator/master/config/crd/monitoring.giantswarm.io_silences.yaml
         for directory in ${{ inputs.directory_pattern }}; do
-          echo "Validating unique names in $directory"
+          echo "Validating silence CRs in $directory"
           kustomize build "$directory" --output "${directory}/resources.yaml"
           kubectl apply -f "${directory}/resources.yaml"
           kubectl delete -f "${directory}/resources.yaml"
