--- a/.github/workflows/silences-validate.yaml
+++ b/.github/workflows/silences-validate.yaml
@@ -7,6 +7,7 @@ on:
       directory_pattern:
         description: "Bash pattern to match directories containing silence CR files"
         default: '*/silences'
+        type: string
         required: true
 
 jobs:
