--- a/.github/workflows/silences-validate.yaml
+++ b/.github/workflows/silences-validate.yaml
@@ -6,7 +6,6 @@ on:
     inputs:
       directory_pattern:
         description: "Bash pattern to match directories containing silence CR files"
-        type: string
         required: true
 
 jobs:
@@ -21,4 +20,4 @@ jobs:
       - id: silences-validate-action
         uses: ./.github/actions/silences-validate
         with:
-          directory_pattern: '${{ inputs.directory_pattern }}'
+          directory_pattern: '*/silences'
