--- a/.github/workflows/silences-validate.yaml
+++ b/.github/workflows/silences-validate.yaml
@@ -6,6 +6,7 @@ on:
     inputs:
       directory_pattern:
         description: "Bash pattern to match directories containing silence CR files"
+        type: string
         required: true
 
 jobs:
