--- a/.github/workflows/silences-validate.yaml
+++ b/.github/workflows/silences-validate.yaml
@@ -19,6 +19,6 @@ jobs:
           ref: ${{ github.ref }}
           fetch-depth: 0
       - id: silences-validate-action
-        uses: ./.github/actions/silences-validate
+        uses: giantswarm/management-cluster-bases/.github/actions/silences-validate@silences-ci
         with:
           directory_pattern: '*/silences'
