--- a/.github/actions/silences-validate/action.yaml
+++ b/.github/actions/silences-validate/action.yaml
@@ -1,3 +1,5 @@
+# Github action used to validate silences CR files added to this repository.
+# Using an action rather than a workflow to be able to pass different inputs depending where it is called from, since workflows do not support inputs for push events.
 name: "Silences validate"
 description: "Validate silences CR files"
 inputs:
@@ -7,39 +9,44 @@ inputs:
 runs:
   using: "composite"
   steps:
+    # Set PATH to include GitHub Action path
+    # This is needed to run the silences-validate.sh script
     - name: Set GitHub Path
       run: echo "$GITHUB_ACTION_PATH" >> $GITHUB_PATH
       shell: bash
       env:
         GITHUB_ACTION_PATH: ${{ github.action_path }}
+    # Install dependencies
+    # yq: is used by silences-validate.sh
+    # kustomize: is used to validate silences CRs
     - name: Install dependencies
       shell: bash
       run: |
         make bin/yq
         make bin/kustomize
+    # Check for non-empty directory_pattern and valid directories
     - name: Check directory pattern
       shell: bash
       run: |
-        # Check for non-empty pattern and valid directories
         test -n "${{ inputs.directory_pattern }}" && \
           printf "%s\n" ${{ inputs.directory_pattern }} | xargs -I{} test -d {} && echo ok
+    # Run files validation for each directory
     - name: Validate silences files
       shell: bash
       run: |
-        # Run files validation for each directory
         for directory in ${{ inputs.directory_pattern }}; do
-          echo "Validating silence files in $directory"
+          echo "Validating silences files in $directory"
           silences-validate.sh "$directory"
         done
     - name: Setup kind cluster
       uses: helm/kind-action@v1
-    - name: Validate silence CRs
+    # Run CR validation for each directory
+    - name: Validate silences CRs
       shell: bash
       run: |
-        # Run CR validation for each directory
         kubectl create -f https://raw.githubusercontent.com/giantswarm/silence-operator/master/config/crd/monitoring.giantswarm.io_silences.yaml
         for directory in ${{ inputs.directory_pattern }}; do
-          echo "Validating silence CRs in $directory"
+          echo "Validating silences CRs in $directory"
           kustomize build "$directory" --output "${directory}/resources.yaml"
           kubectl apply -f "${directory}/resources.yaml"
           kubectl delete -f "${directory}/resources.yaml"
