--- a/.github/workflows/silences-validate.yaml
+++ b/.github/workflows/silences-validate.yaml
@@ -11,7 +11,6 @@ jobs:
         with:
           # Fetch all history so silences-validate.sh can find changed files.
           fetch-depth: 0
-      - id: silences-validate-action
-        uses: giantswarm/management-cluster-bases/.github/actions/silences-validate@silences-ci
+      - uses: giantswarm/management-cluster-bases/.github/actions/silences-validate@silences-ci
         with:
           directory_pattern: '*/silences'
