rename gateway-api configmap
Signed-off-by: Matias Charriere <matias@giantswarm.io>

--- a/extras/gateway-api-bundle/configmap.yaml
+++ b/extras/gateway-api-bundle/configmap.yaml
@@ -4,5 +4,5 @@ data:
     organization: giantswarm
 kind: ConfigMap
 metadata:
-  name: gateway-api-bundle-user-values
+  name: gateway-api-bundle-base
   namespace: org-giantswarm
