--- a/extras/gateway-api-bundle/app.yaml
+++ b/extras/gateway-api-bundle/app.yaml
@@ -14,6 +14,6 @@ spec:
   namespace: org-giantswarm
   userConfig:
     configMap:
-      name: gateway-api-bundle-user-values
+      name: gateway-api-bundle-base
       namespace: org-giantswarm
   version: 0.3.0
