--- a/bases/flux-giantswarm-resources/resource-gitrepositories.yaml
+++ b/bases/flux-giantswarm-resources/resource-gitrepositories.yaml
@@ -17,7 +17,7 @@ metadata:
 spec:
   interval: 30s
   ref:
-    branch: main
+    branch: vintage
   secretRef:
     name: giantswarm-clusters-ssh-credentials
   timeout: 60s
@@ -41,7 +41,7 @@ spec:
       toPath: include
   interval: 30s
   ref:
-    branch: main
+    branch: vintage
   secretRef:
     name: configs-ssh-credentials
   timeout: 60s
@@ -55,7 +55,7 @@ metadata:
 spec:
   interval: 30s
   ref:
-    branch: main
+    branch: vintage
   secretRef:
     name: shared-configs-ssh-credentials
   timeout: 60s
