--- a/extras/backstage/main/shared-config.yaml
+++ b/extras/backstage/main/shared-config.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: shared-config
+  name: shared-config-backstage
   namespace: flux-giantswarm
 data:
   values: |
