Update Silence CI (#237)
Towards: https://github.com/giantswarm/giantswarm/issues/27553

This PR updates the Silence-related CI job logic to ensure that silence
removal PRs are opened ahead of the actual expiry date, introducing a
buffer period of 2 days. This gives reviewers enough time to review and
approve the removal before the silence expires.

It does:

- Detect the silences expiring in <2 days
- Automerge PRs when the silence has expired

---------

Co-authored-by: Théo Brigitte <theo.brigitte@gmail.com>

--- a/.github/workflows/silences-report-expired.yaml
+++ b/.github/workflows/silences-report-expired.yaml
@@ -2,8 +2,8 @@ name: Report expired silences
 
 on:
   schedule:
-    # At 09:00 on Monday.
-    - cron:  '0 9 * * 1'
+    # Everyday at 09:00
+    - cron:  '0 9 * * *'
   workflow_dispatch:
 
 jobs:
