--- a/extras/crossplane/providers/upbound/aws/kustomization.yaml
+++ b/extras/crossplane/providers/upbound/aws/kustomization.yaml
@@ -2,3 +2,18 @@ resources:
 - provider.yaml
 - service-account.yaml
 - deploymentruntime.yaml
+- appautoscaling.yaml
+- cloudwatch.yaml
+- ec2.yaml
+- elasticache.yaml
+- iam.yaml
+- kms.yaml
+- polex.yaml
+- ram.yaml
+- rds.yaml
+- s3.yaml
+- secretsmanager.yaml
+- sqs.yaml
+- cloudfront.yaml
+- acm.yaml
+- route53.yaml
