Make kustomize path default for collection kustomizations

--- a/bases/flux-giantswarm-resources/resource-kustomizations.yaml
+++ b/bases/flux-giantswarm-resources/resource-kustomizations.yaml
@@ -122,7 +122,7 @@ spec:
       kind: App
       name: prometheus-operator-app
       namespace: giantswarm
-  path: ./flux-manifests
+  path: ./kustomize
   prune: true
   retryInterval: 1m
   sourceRef:
