--- a/extras/vsphere-addons/kustomization-vsphere-addons-collection.yaml
+++ b/extras/vsphere-addons/kustomization-vsphere-addons-collection.yaml
@@ -8,7 +8,7 @@ spec:
   - name: catalogs
   force: false
   interval: 5m
-  path: ./flux-manifests
+  path: ./kustomize
   prune: true
   sourceRef:
     kind: GitRepository
