Try to make the vaultless patches non empty but do nothing

--- a/extras/vaultless/patch-delete-vault-cronjob.yaml
+++ b/extras/vaultless/patch-delete-vault-cronjob.yaml
@@ -37,3 +37,9 @@
 #metadata:
 #  name: refresh-vault-token
 #  namespace: flux-giantswarm
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: kustomize-controller
+  namespace: flux-giantswarm
