--- a/extras/vaultless/patch-kustomize-controller.yaml
+++ b/extras/vaultless/patch-kustomize-controller.yaml
@@ -1,8 +1,8 @@
-#apiVersion: apps/v1
-#kind: Deployment
-#metadata:
-#  name: kustomize-controller
-#  namespace: flux-giantswarm
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: kustomize-controller
+  namespace: flux-giantswarm
 #spec:
 #  template:
 #    spec:
