--- a/extras/vaultless/patch-delete-vault-cronjob.yaml
+++ b/extras/vaultless/patch-delete-vault-cronjob.yaml
@@ -1,39 +1,6 @@
-$patch: delete
-apiVersion: batch/v1
-kind: CronJob
-metadata:
-  name: refresh-vault-token
-  namespace: flux-giantswarm
 ---
-$patch: delete
-apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: refresh-vault-token
-  namespace: flux-giantswarm
-rules:
-  - apiGroups: [""]
-    resources: ["pods", "secrets"]
-    verbs: ["*"]
----
-$patch: delete
-apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
-metadata:
-  name: refresh-vault-token
-  namespace: flux-giantswarm
-subjects:
-  - kind: ServiceAccount
-    name: refresh-vault-token
-    namespace: flux-giantswarm
-roleRef:
-  kind: Role
-  name: refresh-vault-token
-  apiGroup: rbac.authorization.k8s.io
----
-$patch: delete
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: refresh-vault-token
+  name: kustomize-controller
   namespace: flux-giantswarm
