--- a/.github/workflows/silences-report-expired.yaml
+++ b/.github/workflows/silences-report-expired.yaml
@@ -12,6 +12,6 @@ jobs:
     name: Report expired silences
     steps:
       - uses: actions/checkout@v4
-      - uses: giantswarm/management-cluster-bases/.github/actions/silences-report-expired@main
+      - uses: ./.github/actions/silences-report-expired
         with:
           directory_pattern: 'bases/silences'
