--- a/.github/workflows/silences-validate.yaml
+++ b/.github/workflows/silences-validate.yaml
@@ -11,6 +11,6 @@ jobs:
         with:
           # Fetch all history so silences-validate.sh can find changed files.
           fetch-depth: 0
-      - uses: giantswarm/management-cluster-bases/.github/actions/silences-validate@main
+      - uses: ./.github/actions/silences-validate
         with:
           directory_pattern: 'bases/silences'
