--- a/bases/silences/jobscrapingfailure-v1alpha2.yaml
+++ b/bases/silences/jobscrapingfailure-v1alpha2.yaml
@@ -1,4 +1,4 @@
-apiVersion: monitoring.giantswarm.io/v1alpha1
+apiVersion: observability.giantswarm.io/v1alpha2
 kind: Silence
 metadata:
   name: jobscrapingfailure
@@ -9,7 +9,7 @@ spec:
   matchers:
     - name: alertname
       value: JobScrapingFailure
-      isRegex: false
+      matchType: "="
     - name: cluster_id
       value: ".*"
-      isRegex: true
+      matchType: "=~"
