--- a/bases/silences/jobscrapingfailure-v1alpha2.yaml
+++ b/bases/silences/jobscrapingfailure-v1alpha2.yaml
@@ -2,6 +2,7 @@ apiVersion: observability.giantswarm.io/v1alpha2
 kind: Silence
 metadata:
   name: jobscrapingfailure
+  namespace: monitoring
   annotations:
     motivation: We did a review of jobs failing everywhere, let's give teams time to manage them.
     valid-until: "2025-07-29"
