--- a/bases/silences/keda-v1alpha2.yaml
+++ b/bases/silences/keda-v1alpha2.yaml
@@ -2,6 +2,7 @@ apiVersion: observability.giantswarm.io/v1alpha2
 kind: Silence
 metadata:
   name: kedaerrors
+  namespace: monitoring
   annotations:
     motivation: We don't support keda yet, yet some customers-installed keda are alerting.
     valid-until: "2025-07-29"
