--- a/.github/actions/silences-validate/action.yaml
+++ b/.github/actions/silences-validate/action.yaml
@@ -51,6 +51,7 @@ runs:
         shopt -s globstar
         kubectl create -f https://raw.githubusercontent.com/giantswarm/silence-operator/main/config/crd/bases/monitoring.giantswarm.io_silences.yaml
         kubectl create -f https://raw.githubusercontent.com/giantswarm/silence-operator/main/config/crd/bases/observability.giantswarm.io_silences.yaml
+        kubectl create namespace monitoring || true
         for directory in ${{ inputs.directory_pattern }}; do
           echo "Validating silences CRs in $directory"
           kustomize build "$directory" --output "${directory}/resources.yaml"
