--- a/bases/silences/jobscrapingfailure.yaml
+++ b/bases/silences/jobscrapingfailure.yaml
@@ -1,7 +1,8 @@
-apiVersion: monitoring.giantswarm.io/v1alpha1
+apiVersion: observability.giantswarm.io/v1alpha2
 kind: Silence
 metadata:
   name: jobscrapingfailure
+  namespace: monitoring
   annotations:
     motivation: We did a review of jobs failing everywhere, let's give teams time to manage them.
     valid-until: "2025-07-29"
@@ -9,7 +10,7 @@ spec:
   matchers:
     - name: alertname
       value: JobScrapingFailure
-      isRegex: false
+      matchType: "="
     - name: cluster_id
       value: ".*"
-      isRegex: true
+      matchType: "=~"
