--- a/bases/flux-giantswarm-resources/kustomization.yaml
+++ b/bases/flux-giantswarm-resources/kustomization.yaml
@@ -2,5 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - ./helm-repositories
+- ./konfiguration-schemas
 - resource-gitrepositories.yaml
 - resource-kustomizations.yaml
