--- a/extras/zot-cache/values.yaml
+++ b/extras/zot-cache/values.yaml
@@ -123,6 +123,9 @@ configFiles:
                 }
               },
             "address": "0.0.0.0",
+            "compat": [
+                    "docker2s2"
+            ],
             "port": "5000"
         },
         "log":
@@ -141,6 +144,7 @@ configFiles:
                 "onDemand": true,
                 "tlsVerify": true,
                 "maxRetries": 3,
+                "preserveDigest": true,
                 "retryDelay": "5m"
               }
             ]
